# Whispr

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  compose.yaml  push-changes.sh
include/: server_socket.h  socket.h
src/: main.cpp  server_socket.cpp  server_socket.h  socket.cpp  whispr_server.cpp
